# org.webosports.app.firstuse

./: .gitignore  CMakeLists.txt  README.md  appinfo.json  debug.html  firstuse.qmlproject  index.html
files/: gplv2.html
lib/ports/source/: PortsHeader.css  PortsSearch.js  package.js
licenses/: main_en.html
plugin/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir
qml/: BasePage.qml  ConfigurationStore.js  CountryPage.qml  FeedsPage.qml  FinishedPage.qml  LanguagePage.qml  LicenseAgreementPage.qml  LocalePage.qml  NetworkConnectPage.qml  NetworkIdCountryMapper.qml  StackButton.qml  TimeZonePage.qml  WebsiteDisplayPage.qml  WelcomePage.qml  WiFiPage.qml  main.qml
qml/js/: GlobalState.js
source/: App.css  App.js  License.js  package.js
test/imports/LunaNext/Common/: LunaService.qml
test/imports/LuneOS/Service/: LunaService.qml
test/imports/firstuse/: FirstUseUtilsStub.js  main_en.html  qmldir
